# velocereduction

./: .gitignore  MANIFEST.in  README.md  VeloceReduction_tutorial.ipynb  VeloceReduction_tutorial.py  paper.bib  paper.md  pyproject.toml  setup.py
.github/workflows/: :wq  check_codecov.yml  draft_pdf.yml  run_python_001122_on_pr.yml
VeloceReduction/: __init__.py  calibration.py  config.py  extraction.py  flux_comparison.py  utils.py
VeloceReduction/hinkle_2000_atlas/: README.txt  hinkle_2000_APPI_lines.txt
VeloceReduction/korg_flux/: calculate_korg_flux.ipynb
VeloceReduction/tramline_information/: tramlines_begin_end_ccd_1_order_139.txt  tramlines_begin_end_ccd_1_order_142.txt  tramlines_begin_end_ccd_1_order_143.txt  tramlines_begin_end_ccd_1_order_144.txt  tramlines_begin_end_ccd_1_order_145.txt  tramlines_begin_end_ccd_1_order_146.txt  tramlines_begin_end_ccd_1_order_147.txt  tramlines_begin_end_ccd_1_order_148.txt  tramlines_begin_end_ccd_1_order_149.txt  tramlines_begin_end_ccd_1_order_150.txt  tramlines_begin_end_ccd_1_order_151.txt  (+88 more)
joss_paper/: paper.bib  paper.md
scripts/: VeloceReduction_tutorial.ipynb  VeloceReduction_tutorial.py  veloce_luminosa_extract_tamlines.ipynb  veloce_luminosa_reduction.ipynb  veloce_luminosa_reduction_script.ipynb  veloce_luminosa_reduction_script.py  veloce_luminosa_wavelength_calibration.ipynb
tests/: test_calibration.py  test_extraction.py  test_flux_comparison.py  test_simbad_query.py  test_utils.py
veloce_luminosa_reduction/: calibration.py  coadding.py  config.py  korg_synthesis.py  order_merging.py  plotting.py  post_processing.py  read_spectra.py  reduction.py  utils.py
velocereduction/: __init__.py  calibration.py  config.py  extraction.py  flux_comparison.py  utils.py
(+878 files in other folders)
